# sea-battle

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client_server/: client.cpp  message.h  server.cpp
db/: users.db
doc/: report.odt
include/: battlefield.h
include/battlefield/: battlefield.h
include/client/: client.h
include/message/: message.h
include/server/: server.h
src/: battlefield.cpp  client.cpp  message.cpp  server.cpp  text_art.cpp
start/: client_start.cpp  server_start.cpp
